# django-blog

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  custom_storage.py  docker-compose.yml  pyproject.toml  requirements.txt  runtime.txt  setup.cfg
.github/workflows/: github_actions.yaml
blog/: admin.py  filters.py  forms.py  models.py  services.py  urls.py  views.py
blog/migrations/: 0001_initial.py  0002_alter_article_body_alter_article_created_at_and_more.py  0002_article.py  0002_article_author.py  0002_initial.py  0002_language_alter_article_body_alter_article_title_and_more.py  0003_alter_article_title_photo.py  0003_article_language_alter_article_author.py  0003_rename_about_self_author_about_yourself.py  0003_tag_created_at_tag_description_tag_updated_at.py  0004_alter_article_author.py  0004_alter_article_body.py  0004_rename_tag_blog_rename_tags_article_blogs.py  0004_tag_article_tags.py  0005_alter_author_about_yourself_alter_author_tags.py  0005_alter_blog_options.py  0005_alter_tag_options.py  0005_article_title_photo_alter_article_blogs_and_more.py  0006_alter_article_options_alter_author_options_and_more.py  0006_alter_article_title_photo.py  0006_alter_author_tags.py  0006_alter_language_language.py  0007_alter_article_language_alter_language_language.py  0007_alter_article_tags.py  0007_alter_article_title_photo.py  0007_author_tags.py  0008_alter_language_language.py  0008_article_description_alter_article_title.py  0009_alter_blog_description_alter_blog_name.py  0010_alter_blog_description_alter_blog_name.py
blog/services/: blog.py  blog_services.py  search.py
blog/tests/: fixtures.py  test_models.py
blog/views/: views.py
common/: __init__.py  custom_storage.py  middleware.py  utils.py
common/django_filters/: utils.py
common/middleware/: common.py
config/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
django_blog/: settings.py  urls.py
search/: forms.py  urls.py  views.py
search/services/: search.py
static/css/: base.css
templates/: base.html
templatetags/: markdown_extras.py  url_replacer.py
users/: admin.py  apps.py  filters.py  forms.py  middleware.py  models.py  services.py  signals.py  urls.py  views.py
(+75 files in other folders)
