[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = "It is a simple article blog for everyone"
authors = ["Michael Fedorov <mikhailfedorov1939@gmail.com>"]
readme = "README.md"
packages = [{include = "config"}]

[tool.poetry.dependencies]
python = "^3.10.4"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
django-bootstrap-v5 = "^1.0.11"
markdown = "^3.4.1"
bleach = "^5.0.1"
bleach-allowlist = "^1.0.3"
pillow = "^9.3.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
pytest-cov = "^4.0.0"
wemake-python-styleguide = "^0.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
