[tool.poetry]
name = "django-blog"
version = "0.1.0"
description = "It is a simple article blog for everyone"
authors = ["Michael Fedorov <mikhailfedorov1939@gmail.com>"]
readme = "README.md"
packages = [{include = "config"}]

[tool.poetry.dependencies]
python = "^3.10.4"
django = "^4.1.3"
psycopg2-binary = "^2.9.5"
python-dotenv = "^0.21.0"
django-bootstrap-v5 = "^1.0.11"
markdown = "^3.4.1"
bleach = "^5.0.1"
bleach-allowlist = "^1.0.3"
pillow = "^9.3.0"
django-filter = "^22.1"
redis = "^4.4.2"
hiredis = "^2.1.1"
gunicorn = "^20.1.0"
whitenoise = "^6.3.0"
dj-database-url = "^1.2.0"
boto3 = "^1.26.65"
django-storages = "^1.13.2"
sorl-thumbnail = "^12.9.0"


[tool.poetry.group.dev.dependencies]
wemake-python-styleguide = "^0.17.0"
docutils = "^0.19"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
